[gd_scene load_steps=31 format=2]

[ext_resource path="res://sprites/StartScreen/live.png" type="Texture" id=1]
[ext_resource path="res://sprites/GrassTile/grass_tile.png" type="Texture" id=2]
[ext_resource path="res://sprites/sky_background.png" type="Texture" id=3]
[ext_resource path="res://sprites/StartScreen/logo.png" type="Texture" id=4]
[ext_resource path="res://fonts/PressStart2P.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://stages/Start.gd" type="Script" id=6]
[ext_resource path="res://sprites/Character/idle.png" type="Texture" id=7]
[ext_resource path="res://sprites/Death/idle.png" type="Texture" id=8]
[ext_resource path="res://sprites/StartScreen/life.png" type="Texture" id=9]
[ext_resource path="res://sprites/Thorn/thorn.png" type="Texture" id=10]
[ext_resource path="res://sprites/Death/Death.png" type="Texture" id=11]
[ext_resource path="res://objects/Console/Console.tscn" type="PackedScene" id=12]
[ext_resource path="res://sounds/music.wav" type="AudioStream" id=13]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 7 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 8 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 9 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="DynamicFont" id=10]
size = 8
outline_size = 1
outline_color = Color( 0.384314, 0.333333, 0.396078, 1 )
font_data = ExtResource( 5 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 34, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 34, 0, 34, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 0, 16, 34, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 34, 16, 34, 16 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=16]
resource_name = "Starting"
length = 1.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("logo:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 160, -0.25, 0, 0.25, 0, 32, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.8 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("live:scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1e-05, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1, 1.5 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("live:scale:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1e-05, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1, 1.5 )
}
tracks/3/type = "value"
tracks/3/path = NodePath("press_start_label:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="DynamicFont" id=17]
size = 8
outline_size = 1
outline_color = Color( 0.384314, 0.333333, 0.396078, 1 )
font_data = ExtResource( 5 )

[node name="Start" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sky_background" type="Sprite" parent="."]
position = Vector2( 120, 67.5 )
texture = ExtResource( 3 )

[node name="ground" type="Node2D" parent="."]
position = Vector2( 72, 131.5 )

[node name="grass_tile" type="Sprite" parent="ground"]
texture = ExtResource( 2 )
offset = Vector2( -16, -8 )
region_enabled = true
region_rect = Rect2( 32, 0, 16, 16 )

[node name="grass_tile2" type="Sprite" parent="ground"]
position = Vector2( 16, 0 )
texture = ExtResource( 2 )
offset = Vector2( -16, -8 )
region_enabled = true
region_rect = Rect2( 32, 0, 16, 16 )

[node name="grass_tile3" type="Sprite" parent="ground"]
position = Vector2( 32, 0 )
texture = ExtResource( 2 )
offset = Vector2( -16, -8 )
region_enabled = true
region_rect = Rect2( 32, 0, 16, 16 )

[node name="grass_tile4" type="Sprite" parent="ground"]
position = Vector2( 48, 0 )
texture = ExtResource( 2 )
offset = Vector2( -16, -8 )
region_enabled = true
region_rect = Rect2( 32, 0, 16, 16 )

[node name="grass_tile5" type="Sprite" parent="ground"]
position = Vector2( 64, 0 )
texture = ExtResource( 2 )
offset = Vector2( -16, -8 )
region_enabled = true
region_rect = Rect2( 32, 0, 16, 16 )

[node name="grass_tile6" type="Sprite" parent="ground"]
position = Vector2( 80, 0 )
texture = ExtResource( 2 )
offset = Vector2( -16, -8 )
region_enabled = true
region_rect = Rect2( 32, 0, 16, 16 )

[node name="grass_tile7" type="Sprite" parent="ground"]
position = Vector2( 96, 0 )
texture = ExtResource( 2 )
offset = Vector2( -16, -8 )
region_enabled = true
region_rect = Rect2( 32, 0, 16, 16 )

[node name="grass_tile8" type="Sprite" parent="ground"]
position = Vector2( 112, 0 )
texture = ExtResource( 2 )
offset = Vector2( -16, -8 )
region_enabled = true
region_rect = Rect2( 32, 0, 16, 16 )

[node name="grass_tile9" type="Sprite" parent="ground"]
position = Vector2( 128, 0 )
texture = ExtResource( 2 )
offset = Vector2( -16, -8 )
region_enabled = true
region_rect = Rect2( 32, 0, 16, 16 )

[node name="grass_tile10" type="Sprite" parent="ground"]
position = Vector2( 16, -24 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 16, 16 )

[node name="grass_tile11" type="Sprite" parent="ground"]
position = Vector2( -16, -24 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 16, 0, 16, 16 )

[node name="characters" type="Node2D" parent="."]
position = Vector2( 48, 3.5 )

[node name="character" type="AnimatedSprite" parent="characters"]
position = Vector2( 24, 104 )
frames = SubResource( 3 )
frame = 1
playing = true

[node name="death" type="AnimatedSprite" parent="characters"]
position = Vector2( 120, 104 )
frames = SubResource( 6 )
playing = true

[node name="heart" type="AnimatedSprite" parent="characters"]
position = Vector2( 72, 104 )
frames = SubResource( 9 )
frame = 1
playing = true

[node name="hi_score_label" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 48.0
margin_top = 54.5
margin_right = -48.0
margin_bottom = 62.5
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "HiScore:999999"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="logo" type="Sprite" parent="."]
position = Vector2( 120, 35.5 )
texture = ExtResource( 4 )

[node name="live" type="AnimatedSprite" parent="."]
position = Vector2( 160, 19.5 )
frames = SubResource( 15 )
frame = 1
playing = true

[node name="animation_player" type="AnimationPlayer" parent="."]
anims/Starting = SubResource( 16 )

[node name="press_start_label" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 48.0
margin_top = 4.5
margin_right = -48.0
margin_bottom = 23.5
custom_fonts/font = SubResource( 17 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Pressione 
qualquer bot√£o"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="thorn" type="Sprite" parent="."]
position = Vector2( 152, 107.5 )
texture = ExtResource( 10 )

[node name="Death" type="Sprite" parent="."]
position = Vector2( 184, 107.5 )
texture = ExtResource( 11 )
region_enabled = true
region_rect = Rect2( 16, 0, 16, 16 )

[node name="Console" parent="." instance=ExtResource( 12 )]

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -8.0
autoplay = true
[connection signal="animation_finished" from="animation_player" to="." method="_on_animation_player_animation_finished"]
